--- a/app/src/main/res/layout/receycler_view_item.xml
+++ b/app/src/main/res/layout/receycler_view_item.xml
@@ -35,6 +35,14 @@
         android:padding="5dp"
         android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />
 
+    <TextView
+        android:id="@+id/hourlyTarget"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Hourly Target"
+        android:padding="5dp"
+        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -63,6 +71,18 @@
         android:layout_height="wrap_content"
         android:hint="Hourly Output"
         android:inputType="number"/>
+
+    <Spinner
+        android:id="@+id/problemTypeSpinner"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Problem Type"></Spinner>
+
+    <Spinner
+        android:id="@+id/problemsSpinner"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Problem"></Spinner>
 
     <Button
         android:id="@+id/saveIndividualEntry"
