--- a/app/src/main/res/layout/worker_assign_custom_layout.xml
+++ b/app/src/main/res/layout/worker_assign_custom_layout.xml
@@ -22,7 +22,7 @@
             android:layout_weight="0.75"
             android:inputType="textMultiLine" />
 
-        <TextView
+        <EditText
             android:id="@+id/hourlyTargetItem"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
