--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,57 +5,90 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:padding="10dp"
     tools:context=".activity.LoginActivity">
 
-    <TextView
+    <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="20dp"
-        android:gravity="center"
-        android:text="HOURLY PRODUCTIVITY APP"
-        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-        android:textColor="@color/colorPrimary"
-        android:textStyle="bold" />
+        android:background="@color/colorPrimary">
 
-    <EditText
-        android:id="@+id/editTextSuperVisorId"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Supervisor ID"
-        android:inputType="number" />
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolBar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-    <Spinner
-        android:id="@+id/spinnerLine"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"></Spinner>
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <Button
+                    android:id="@+id/buttonRefresh"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true"
+                    android:layout_marginRight="5dp"
+                    android:onClick="refreshLines"
+                    android:padding="3dp"
+                    android:text="Refresh" />
+            </RelativeLayout>
+        </android.support.v7.widget.Toolbar>
+    </android.support.design.widget.AppBarLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:padding="10dp">
 
-        <Button
-            android:layout_width="0dp"
+        <TextView
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginRight="10dp"
-            android:layout_marginTop="20dp"
-            android:layout_weight="0.5"
-            android:background="@color/redButton"
-            android:onClick="cancelProcess"
-            android:text="Exit"
-            android:textColor="@color/textColor" />
+            android:layout_margin="20dp"
+            android:gravity="center"
+            android:text="HOURLY PRODUCTIVITY APP"
+            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+            android:textColor="@color/colorPrimary"
+            android:textStyle="bold" />
 
-        <Button
-            android:layout_width="0dp"
+        <EditText
+            android:id="@+id/editTextSuperVisorId"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="20dp"
-            android:layout_weight="0.5"
-            android:background="@color/colorPrimary"
-            android:onClick="continueProcess"
-            android:text="Continue"
-            android:textColor="@color/textColor" />
+            android:hint="Supervisor ID"
+            android:inputType="number" />
+
+        <Spinner
+            android:id="@+id/spinnerLine"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"></Spinner>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <Button
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="10dp"
+                android:layout_marginTop="20dp"
+                android:layout_weight="0.5"
+                android:background="@color/redButton"
+                android:onClick="cancelProcess"
+                android:text="Exit"
+                android:textColor="@color/textColor" />
+
+            <Button
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="20dp"
+                android:layout_weight="0.5"
+                android:background="@color/colorPrimary"
+                android:onClick="continueProcess"
+                android:text="Continue"
+                android:textColor="@color/textColor" />
+        </LinearLayout>
     </LinearLayout>
 
 </LinearLayout>
