--- a/app/src/main/res/layout/fragment_hourly_report.xml
+++ b/app/src/main/res/layout/fragment_hourly_report.xml
@@ -6,6 +6,13 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
+    <Button
+        android:id="@+id/buttonRefreshHourlyReport"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Refresh"
+        android:layout_margin="10dp" />
+
     <HorizontalScrollView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
