--- a/app/src/main/res/layout/fragment_full_day_summery.xml
+++ b/app/src/main/res/layout/fragment_full_day_summery.xml
@@ -88,7 +88,7 @@
         android:layout_alignParentTop="true"
         android:layout_alignStart="@+id/textView"
         android:layout_marginTop="170dp"
-        android:text="Line WIP"
+        android:text="Remaining Output"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
 
     <TextView
