Minor Issues from Mithu vai Resolved

--- a/app/src/main/res/layout/fragment_input_output.xml
+++ b/app/src/main/res/layout/fragment_input_output.xml
@@ -44,8 +44,8 @@
         android:layout_height="wrap_content"
         android:hint="Problem"></Spinner>
 
-    <EditText
-        android:id="@+id/editTextStatus"
+    <Spinner
+        android:id="@+id/spinnerStatus"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Status" />
