--- a/app/src/main/res/layout/fragment_full_day_summery.xml
+++ b/app/src/main/res/layout/fragment_full_day_summery.xml
@@ -27,11 +27,10 @@
         android:id="@+id/lineTargetTotal"
         android:layout_width="205dp"
         android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginEnd="18dp"
         android:layout_marginTop="56dp"
+        android:layout_marginLeft="20dp"
         android:inputType="textPersonName"
+        android:layout_toRightOf="@id/textView2"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         android:textColor="@color/colorPrimary"
         android:textStyle="bold" />
