--- a/app/src/main/res/layout/fragment_full_day_summery.xml
+++ b/app/src/main/res/layout/fragment_full_day_summery.xml
@@ -3,6 +3,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <Button
+        android:id="@+id/buttonRefresh"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Refresh"
+        android:layout_margin="10dp"/>
+
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
@@ -10,7 +17,9 @@
         android:layout_marginStart="20dp"
         android:layout_marginTop="20dp"
         android:text="Full Day Summery"
+        android:visibility="gone"
         android:textColor="@color/colorPrimary"
+        android:layout_below="@+id/refreshButton"
         android:textStyle="bold"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
 
@@ -18,16 +27,17 @@
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/lineTargetTotal"
-        android:layout_alignStart="@+id/textView"
-        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-        android:text="Line Target Total" />
+        android:layout_alignParentTop="true"
+        android:layout_alignStart="@+id/refreshButton"
+        android:layout_marginTop="74dp"
+        android:text="Line Target Total"
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
 
     <TextView
         android:id="@+id/lineTargetTotal"
         android:layout_width="205dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="56dp"
+        android:layout_marginTop="76dp"
         android:layout_marginLeft="20dp"
         android:inputType="textPersonName"
         android:layout_toRightOf="@id/textView2"
@@ -39,7 +49,7 @@
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignStart="@+id/textView"
+        android:layout_alignStart="@+id/refreshButton"
         android:layout_alignTop="@+id/lineOutputTotal"
         android:text="Line Output"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
@@ -53,7 +63,7 @@
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         android:textColor="@color/colorPrimary"
         android:layout_alignStart="@+id/lineTargetTotal"
-        android:layout_marginTop="90dp"
+        android:layout_marginTop="110dp"
         android:ems="10"
         android:inputType="textPersonName" />
 
@@ -61,15 +71,15 @@
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_alignStart="@+id/textView"
-        android:layout_marginTop="128dp"
+        android:layout_above="@+id/textView5"
+        android:layout_alignStart="@+id/refreshButton"
+        android:layout_marginBottom="-170dp"
         android:text="Total Input"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
 
     <TextView
         android:id="@+id/totalInput"
-        android:layout_width="221dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignBaseline="@id/textView4"
         android:layout_toRightOf="@id/textView4"
@@ -85,8 +95,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:layout_alignStart="@+id/textView"
-        android:layout_marginTop="170dp"
+        android:layout_alignStart="@+id/refreshButton"
+        android:layout_marginTop="179dp"
         android:text="Remaining Output"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
 
