--- a/app/src/main/res/layout/fragment_full_day_summery.xml
+++ b/app/src/main/res/layout/fragment_full_day_summery.xml
@@ -28,8 +28,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:layout_alignStart="@+id/refreshButton"
-        android:layout_marginTop="74dp"
+        android:layout_alignStart="@+id/buttonRefresh"
+        android:layout_marginTop="76dp"
         android:text="Line Target Total"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
 
@@ -49,7 +49,7 @@
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignStart="@+id/refreshButton"
+        android:layout_alignStart="@+id/buttonRefresh"
         android:layout_alignTop="@+id/lineOutputTotal"
         android:text="Line Output"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
@@ -71,9 +71,9 @@
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/textView5"
-        android:layout_alignStart="@+id/refreshButton"
-        android:layout_marginBottom="-170dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignStart="@+id/buttonRefresh"
+        android:layout_marginTop="146dp"
         android:text="Total Input"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
 
@@ -95,7 +95,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:layout_alignStart="@+id/refreshButton"
+        android:layout_alignStart="@+id/buttonRefresh"
         android:layout_marginTop="179dp"
         android:text="Remaining Output"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
@@ -115,18 +115,20 @@
         android:id="@+id/textView20"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignStart="@+id/buttonRefresh"
+        android:layout_marginTop="224dp"
         android:text="Style Summery"
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         android:textColor="@color/colorPrimary"
-        android:textStyle="bold"
-        android:layout_margin="20dp"
-        android:layout_below="@id/lineWIP"
-        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/totalStyleInput"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/textView20"
+        android:layout_marginTop="20dp"
         android:layout_alignLeft="@id/textView20"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         android:text="Total Input" />
@@ -137,8 +139,18 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/totalStyleInput"
         android:layout_alignLeft="@id/textView20"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="10dp"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         android:text="Total Output" />
+
+    <TextView
+        android:id="@+id/totalStyleBalance"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/totalStyleOutput"
+        android:layout_alignLeft="@id/textView20"
+        android:layout_marginTop="10dp"
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+        android:text="Remaining Balance" />
 
 </RelativeLayout>
