--- a/app/src/main/res/layout/activity_production.xml
+++ b/app/src/main/res/layout/activity_production.xml
@@ -24,20 +24,20 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentRight="true"
-                    android:text="Assign\nWorkers"
-                    android:padding="5dp"
                     android:layout_marginRight="5dp"
-                    android:background="#65ef87"/>
+                    android:background="#65ef87"
+                    android:padding="5dp"
+                    android:text="Assign\nWorkers" />
 
                 <Button
-                    android:id="@+id/buttonLineInput"
+                    android:id="@+id/buttonLineTarget"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_toLeftOf="@+id/buttonJumpWorkerAssign"
-                    android:text="Total Target"
-                    android:padding="5dp"
                     android:layout_marginRight="10dp"
-                    android:background="#65ef87"/>
+                    android:layout_toLeftOf="@+id/buttonJumpWorkerAssign"
+                    android:background="#65ef87"
+                    android:padding="5dp"
+                    android:text="Total Target" />
             </RelativeLayout>
 
         </android.support.v7.widget.Toolbar>
