Minor fixed at 25/10/2018

--- a/app/src/main/res/layout/fragment_full_day_summery.xml
+++ b/app/src/main/res/layout/fragment_full_day_summery.xml
@@ -19,7 +19,7 @@
         android:text="Full Day Summery"
         android:visibility="gone"
         android:textColor="@color/colorPrimary"
-        android:layout_below="@+id/refreshButton"
+        android:layout_below="@+id/buttonRefresh"
         android:textStyle="bold"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
 
