--- a/app/src/main/res/layout/fragment_hourly_production.xml
+++ b/app/src/main/res/layout/fragment_hourly_production.xml
@@ -5,6 +5,12 @@
     android:orientation="vertical"
     android:padding="10dp">
 
+    <Button
+        android:id="@+id/buttonRefeshWorker"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="REFRESH"
+        android:gravity="center"/>
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
