--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -62,6 +62,11 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"></Spinner>
 
+        <Spinner
+            android:id="@+id/spinnerSection"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"></Spinner>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
