--- a/app/src/main/res/layout/activity_production.xml
+++ b/app/src/main/res/layout/activity_production.xml
@@ -50,7 +50,7 @@
         app:tabGravity="fill"
         app:tabIndicatorHeight="4dp"
         app:tabMaxWidth="0dp"
-        app:tabMode="fixed"
+        app:tabMode="scrollable"
         app:tabSelectedTextColor="@color/colorPrimaryDark"
         app:tabTextColor="@color/colorPrimaryDark" />
 
