--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -58,7 +58,7 @@
             android:inputType="number" />
 
         <Spinner
-            android:id="@+id/spinnerLine"
+            android:id="@+id/spinnerLine1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"></Spinner>
 
