--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -60,12 +60,12 @@
         <Spinner
             android:id="@+id/spinnerLine1"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"></Spinner>
+            android:layout_height="50dp"></Spinner>
 
         <Spinner
             android:id="@+id/spinnerSection"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"></Spinner>
+            android:layout_height="50dp"></Spinner>
 
         <LinearLayout
             android:layout_width="match_parent"
